update docker, db connection, models
