# app/routers/email/rest.py
@@ -2,13 +2,17 @@ from flask import Blueprint, g, request
 
 from .controller import (
     show_email,
-    create_email, 
+    create_email,
     update_email,
     remove_email,
+    show_address,
+    create_address,
+    update_address,
+    remove_address,
     create_scheduled_email,
     emailCrud
 )
-from .schema import EmailPydantic, ScheduledEmailPydantic
+from . import schema
 from ...dependencies.utils import create_response, status, QueryPaginationParams
 from ...dependencies.log import logger
 from ...database import connection as conn
@@ -53,17 +57,35 @@ async def delete_email(id: int):
         logger.error(e)
         return create_response(status=status.error(e))
 
-
-@router.get("/scheduled_email")
-async def get_scheduled_email():
-    pass
-
-
-@router.post("/save_email")
-async def post_scheduled_email():
+@router.get("/address")
+async def get_address():
     try:
-        async with conn.session() as session:
-            return await create_scheduled_email(request, session)
+        return await show_address(request, g.session)
+    except Exception as e:
+        logger.error(e)
+        return create_response(status=status.error(e))
+    
+
+@router.post("/address")
+async def post_address():
+    try:
+        return await create_address(request, g.session)
+    except Exception as e:
+        logger.error(e)
+        return create_response(status=status.error(e))
+
+@router.put("/address/<id>")
+async def put_address(id: int):
+    try:
+        return await update_address(request, id, g.session)
+    except Exception as e:
+        logger.error(e)
+        return create_response(status=status.error(e))
+
+@router.delete("/address/<id>")
+async def delete_address(id: int):
+    try:
+        return await remove_address(id, g.session)
     except Exception as e:
         logger.error(e)
         return create_response(status=status.error(e))
