# static/openapi.json
@@ -203,6 +203,203 @@
                 }
             }
         },
+        "/email/address":{
+            "get":{
+                "tags":["Email"],
+                "summary": "Get Email Address",
+                "parameters": [
+                    {
+                        "required": false,
+                        "schema": {
+                            "title": "ID",
+                            "type": "string",
+                            "default": null
+                        },
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "required": false,
+                        "description": "Show the selected column, leave it empty to show all",
+                        "schema": {
+                            "title": "Fields",
+                            "type": "string"
+                        },
+                        "name": "fields",
+                        "in": "query"
+                    },
+                    {
+                        "required": false,
+                        "schema": {
+                            "title": "Page",
+                            "minimum": 1,
+                            "type": "integer",
+                            "default": 1
+                        },
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "required": false,
+                        "description": "Data limit in 1 page",
+                        "schema": {
+                            "title": "Limit",
+                            "maximum": 100,
+                            "exclusiveMinimum": false,
+                            "type": "integer",
+                            "default": 20
+                        },
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "required": false,
+                        "description": "Sort by available column",
+                        "schema": {
+                            "title": "Sortby",
+                            "type": "string",
+                            "default": "id"
+                        },
+                        "name": "sortBy",
+                        "in": "query"
+                    },
+                    {
+                        "required": false,
+                        "description": "Sort the query: `asc` or `desc`",
+                        "schema": {
+                            "title": "SortType",
+                            "type": "string",
+                            "default": "asc"
+                        },
+                        "name": "sortType",
+                        "in": "query"
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description": "Succesfull Response",
+                        "content":{"application/json":{
+                            "schema":{}
+                        }}
+                    }
+                }
+            },
+            "post":{
+                "tags": ["Email"],
+                "summary": "Create Email Address",
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "title": "CreateEmail",
+                                "type": "object",
+                                "properties": {
+                                    "name":{
+                                        "title": "name",
+                                        "type": "string",
+                                        "maximum": 100
+                                    },
+                                    "address":{
+                                        "title": "address",
+                                        "type": "string",
+                                        "maximum": 100
+                                    }
+                                },
+                                "required":true
+                            },
+                            "example":{
+                                "name":"string",
+                                "address":"string@gmail.com"
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "200":{
+                        "description": "Succesfull Response",
+                        "content":{"application/json":{
+                            "schema":{}
+                        }}
+                    }
+                }
+            }
+        },
+        "/email/address/{id}":{
+            "put":{
+                "tags": ["Email"],
+                "summary": "Update Email Address",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "title": "Id",
+                            "type": "integer",
+                            "minimum": 1
+                        },
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "title": "CreateEmailAddress",
+                                "type": "object",
+                                "properties": {
+                                    "name":{
+                                        "title": "name",
+                                        "type": "string",
+                                        "maximum": 100
+                                    },
+                                    "address":{
+                                        "title": "address",
+                                        "type": "string",
+                                        "maximum": 100
+                                    }
+                                }    
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            },
+            "delete":{
+                "tags": ["Email"],
+                "summary": "Delete Email Address",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "title": "Id",
+                            "type": "integer",
+                            "minimum": 1
+                        },
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/email/save_email":{
             "post":{
                 "tags":["Email"],
